--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 </head>
 <body>
 <header>
-<a href="">WebStudio</a>
 
+<a href="./index.html">WebStudio</a>
+
+<nav>
 <ul>
-<li><nav>Studio</nav></li>
-<li><nav>Portfolio</nav></li>
-<li><nav>Contacts</nav></li>
+<li><a href="">Studio</a></li>
+<li><a href="">Portfolio</a></li>
+<li><a href="">Contacts</a></li>
 </ul>
+</nav>
 
 <address>
 <ul>
@@ -26,50 +29,67 @@
 
 <main>
 
-<h1> Effective Solutions <br> for Your Business </h1>
+<section>
+<h1> Effective Solutions for Your Business </h1>
 <button type="button">Order Service</button>
+</section>
 
+<section>
 <ul>
-
-<li><h3>Strategy</h3></li>
-
-<li><p>Our goal is to identify the Business
-problem to walk away with the perfect and creative solution.</p></li>
-
-<li><h3>Punctuality</h3></li>
-<li><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-
-<li><h3>Diligence</h3></li>
-<li><p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-
-<li><h3>Technologies</h3></li>
-<li><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
-
-
+    <li>
+        <h3>Strategy</h3>
+        <p>Our goal is to identify the Business
+            problem to walk away with the perfect and creative solution.</p>
+    </li>
+    <li>
+        <h3>Punctuality</h3>
+        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+    </li>
+    <li>
+        <h3>Diligence</h3>
+        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+    </li>
+    <li>
+        <h3>Technologies</h3>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+    </li>
 </ul>
+
+</section>
+
+<section>
 
 <h2>Our Team</h2>
 
-<img src="images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-<h3>Mark Guerrero</h3>
-<p>Product Designer</p>
+<ul>
+    <li>
+        <img src="images/MarkGuerrero.jpg" alt="Mark Guerrero picture" width="264" height="260">
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+    </li>
+    <li>
+        <img src="images/TomFord.jpg" alt="Tom Ford picture" width="264" height="260">
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+    </li>
+    <li>
+        <img src="images/CamilaGarcia.jpg" alt="Camila Garcia picture" width="264" height="260">
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+    </li>
+    <li>
+        <img src="images/DanielWilson.jpg" alt="Daniel Wilson picture" width="264" height="260">
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+    </li>
+</ul>
 
-<img src="images/TomFord.jpg" alt="Tom Ford" width="264" height="260">
-<h3>Tom Ford</h3>
-<p>Frontend Developer</p>
-
-<img src="images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" height="260">
-<h3>Camila Garcia</h3>
-<p>Marketing</p>
-
-<img src="images/DanielWilson.jpg" alt="Daniel Wilson" width="264" height="260">
-<h3>Daniel Wilson</h3>
-<p>UI Designer</p>
+</section>
 
 </main>
 
 <footer>
-<a href="">WebStudio</a>
+<a href="./index.html">WebStudio</a>
 
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>  
   
