--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
 
 <nav>
-    
+
 <a href="./index.html">WebStudio</a>
 
 <ul>
@@ -37,6 +37,7 @@
 </section>
 
 <section>
+<h2>section 2</h2>
 <ul>
     <li>
         <h3>Strategy</h3>
