--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
 
 <ul>
     <li>
-        <img src="images/MarkGuerrero.jpg" alt="Mark Guerrero picture" width="264" height="260">
+        <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero picture" width="264" height="260">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
     </li>
     <li>
-        <img src="images/TomFord.jpg" alt="Tom Ford picture" width="264" height="260">
+        <img src="./images/TomFord.jpg" alt="Tom Ford picture" width="264" height="260">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
     </li>
     <li>
-        <img src="images/CamilaGarcia.jpg" alt="Camila Garcia picture" width="264" height="260">
+        <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia picture" width="264" height="260">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
     </li>
     <li>
-        <img src="images/DanielWilson.jpg" alt="Daniel Wilson picture" width="264" height="260">
+        <img src="./images/DanielWilson.jpg" alt="Daniel Wilson picture" width="264" height="260">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
     </li>
