--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <a href="./index.html" class="header-list-link">Studio</a>
           </li>
           <li class="header-list-item">
-            <a href="./index.html" class="header-list-link">Portfolio</a>
+            <a href="" class="header-list-link">Portfolio</a>
           </li>
           <li class="header-list-item">
-            <a href="./index.html" class="header-list-link">Contacts</a>
+            <a href="" class="header-list-link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -148,7 +148,7 @@
       </section>
 
       <section class="portfolio">
-        <h1 class="portfolio-title">Our Portfolio</h1>
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-list-item">
             <img
