--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo-link">
         Web<span class="logo-link-white">Studio</span></a
       >
