--- a/index.html
+++ b/index.html
@@ -22,212 +22,224 @@
   </head>
   <body>
     <header>
-      <nav class="header-nav">
-        <a href="./index.html" class="logo-link">
-          Web<span class="logo-link-black">Studio</span></a
-        >
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo-link">
+            Web<span class="logo-link-black">Studio</span></a
+          >
 
-        <ul class="header-list">
-          <li class="header-list-item">
-            <a href="./index.html" class="header-list-link">Studio</a>
-          </li>
-          <li class="header-list-item">
-            <a href="" class="header-list-link">Portfolio</a>
-          </li>
-          <li class="header-list-item">
-            <a href="" class="header-list-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="header-list">
+            <li class="header-list-item">
+              <a href="./index.html" class="header-list-link">Studio</a>
+            </li>
+            <li class="header-list-item">
+              <a href="" class="header-list-link">Portfolio</a>
+            </li>
+            <li class="header-list-item">
+              <a href="" class="header-list-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="header-address">
-        <ul class="header-address-list">
-          <li class="header-address-item">
-            <a href="mailto:info@devstudio.com" class="header-address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-address-item">
-            <a href="tel:+110001111111" class="header-address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="header-address-item">
+              <a href="mailto:info@devstudio.com" class="header-address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-address-item">
+              <a href="tel:+110001111111" class="header-address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="main-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-title-btn">Order Service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="main-title-btn">Order Service</button>
+        </div>
       </section>
 
       <section class="advantages">
-        <h2 hidden>section 2</h2>
-        <ul class="advantages-list">
-          <li class="advantages-list-item">
-            <h3 class="advantages-title">Strategy</h3>
-            <p class="advantages-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="advantages-item-list">
-            <h3 class="advantages-title">Punctuality</h3>
-            <p class="advantages-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="advantages-item-list">
-            <h3 class="advantages-title">Diligence</h3>
-            <p class="advantages-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="advantages-item-list">
-            <h3 class="advantages-title">Technologies</h3>
-            <p class="advantages-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>section 2</h2>
+          <ul class="advantages-list">
+            <li class="advantages-list-item">
+              <h3 class="advantages-title">Strategy</h3>
+              <p class="advantages-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-item-list">
+              <h3 class="advantages-title">Punctuality</h3>
+              <p class="advantages-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-item-list">
+              <h3 class="advantages-title">Diligence</h3>
+              <p class="advantages-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-item-list">
+              <h3 class="advantages-title">Technologies</h3>
+              <p class="advantages-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
 
-        <ul class="team-list">
-          <li class="team-list-item">
-            <img
-              src="./images/team/MarkGuerrero.jpg"
-              alt="Mark Guerrero picture"
-              class="team-list-img"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Mark Guerrero</h3>
-            <p class="team-list-text">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/team/TomFord.jpg"
-              alt="Tom Ford picture"
-              class="team-list-img"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Tom Ford</h3>
-            <p class="team-list-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/team/CamilaGarcia.jpg"
-              alt="Camila Garcia picture"
-              class="team-list-img"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Camila Garcia</h3>
-            <p class="team-list-text">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/team/DanielWilson.jpg"
-              alt="Daniel Wilson picture"
-              class="team-list-img"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-list-title">Daniel Wilson</h3>
-            <p class="team-list-text">UI Designer</p>
-          </li>
-        </ul>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                src="./images/team/MarkGuerrero.jpg"
+                alt="Mark Guerrero picture"
+                class="team-list-img"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-list-title">Mark Guerrero</h3>
+              <p class="team-list-text">Product Designer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/team/TomFord.jpg"
+                alt="Tom Ford picture"
+                class="team-list-img"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-list-title">Tom Ford</h3>
+              <p class="team-list-text">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/team/CamilaGarcia.jpg"
+                alt="Camila Garcia picture"
+                class="team-list-img"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-list-title">Camila Garcia</h3>
+              <p class="team-list-text">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/team/DanielWilson.jpg"
+                alt="Daniel Wilson picture"
+                class="team-list-img"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-list-title">Daniel Wilson</h3>
+              <p class="team-list-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/1.jpg"
-              alt="Banking App Screenshots"
-              width="360"
-              height="300"
-              class="portfolio-list-img"
-            />
-            <h3 class="portfolio-list-title">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/2.jpg"
-              alt="QR scanning"
-              width="360"
-              height="300"
-              class="portfolio-list-img"
-            />
-            <h3 class="portfolio-list-title">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/3.jpg"
-              alt="Meditation App on Laptop and Phone screens"
-              width="360"
-              height="300"
-              class="portfolio-list-img"
-            />
-            <h3 class="portfolio-list-title">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/4.jpg"
-              alt="Driver uses taxi app"
-              width="360"
-              height="300"
-              class="portfolio-list-img"
-            />
-            <h3 class="portfolio-list-title">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/5.jpg"
-              alt="Phone with screen Illustrations"
-              width="360"
-              height="300"
-              class="portfolio-list-img"
-            />
-            <h3 class="portfolio-list-title">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              src="./images/portfolio/6.jpg"
-              alt="Girl listening music"
-              width="360"
-              height="300"
-              class="portfolio-list-img"
-            />
-            <h3 class="portfolio-list-title">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/1.jpg"
+                alt="Banking App Screenshots"
+                width="360"
+                height="300"
+                class="portfolio-list-img"
+              />
+              <h3 class="portfolio-list-title">Banking App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/2.jpg"
+                alt="QR scanning"
+                width="360"
+                height="300"
+                class="portfolio-list-img"
+              />
+              <h3 class="portfolio-list-title">Cashless Payment</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/3.jpg"
+                alt="Meditation App on Laptop and Phone screens"
+                width="360"
+                height="300"
+                class="portfolio-list-img"
+              />
+              <h3 class="portfolio-list-title">Meditation App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/4.jpg"
+                alt="Driver uses taxi app"
+                width="360"
+                height="300"
+                class="portfolio-list-img"
+              />
+              <h3 class="portfolio-list-title">Taxi Service</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/5.jpg"
+                alt="Phone with screen Illustrations"
+                width="360"
+                height="300"
+                class="portfolio-list-img"
+              />
+              <h3 class="portfolio-list-title">Screen Illustrations</h3>
+              <p class="portfolio-list-text">Design</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/portfolio/6.jpg"
+                alt="Girl listening music"
+                width="360"
+                height="300"
+                class="portfolio-list-img"
+              />
+              <h3 class="portfolio-list-title">Online Courses</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo-link">
-        Web<span class="logo-link-white">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>  
+      <div class="container">
+        <a href="./index.html" class="logo-link">
+          Web<span class="logo-link-white">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
