--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
                 width="264"
                 height="260"
               />
+              <div class="team-list-div">
               <h3 class="team-list-title">Mark Guerrero</h3>
               <p class="team-list-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -126,8 +128,10 @@
                 width="264"
                 height="260"
               />
+              <div class="team-list-div">
               <h3 class="team-list-title">Tom Ford</h3>
               <p class="team-list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -137,8 +141,10 @@
                 width="264"
                 height="260"
               />
+              <div class="team-list-div">
               <h3 class="team-list-title">Camila Garcia</h3>
               <p class="team-list-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -148,8 +154,10 @@
                 width="264"
                 height="260"
               />
+              <div class="team-list-div">
               <h3 class="team-list-title">Daniel Wilson</h3>
               <p class="team-list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
