--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <div class="portfolio-div">
               <h3 class="portfolio-list-title">Banking App</h3>
               <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -187,8 +189,10 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <div class="portfolio-div">
               <h3 class="portfolio-list-title">Cashless Payment</h3>
               <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -198,10 +202,12 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <div class="portfolio-div">
               <h3 class="portfolio-list-title">Meditation App</h3>
               <p class="portfolio-list-text">App</p>
+              </div>
             </li>
-            <li class="portfolio-list-item">
+            <li>
               <img
                 src="./images/portfolio/4.jpg"
                 alt="Driver uses taxi app"
@@ -209,8 +215,10 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <div class="portfolio-div">
               <h3 class="portfolio-list-title">Taxi Service</h3>
               <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -220,8 +228,10 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <div class="portfolio-div">
               <h3 class="portfolio-list-title">Screen Illustrations</h3>
               <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -231,8 +241,10 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <div class="portfolio-div">
               <h3 class="portfolio-list-title">Online Courses</h3>
               <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
