--- a/index.html
+++ b/index.html
@@ -253,9 +253,11 @@
 
     <footer class="footer">
       <div class="container">
+        <div class="footer-logo-link">
         <a href="./index.html" class="logo-link">
           Web<span class="logo-link-white">Studio</span></a
         >
+      </div>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
