--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <p class="portfolio-list-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="./images/portfolio/3.jpg">
               <img
                 src="./images/portfolio/4.jpg"
                 alt="Driver uses taxi app"
