--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <ul class="header-list">
             <li class="header-list-item">
               <a href="./index.html" class="header-list-link">Studio</a>
+              <svg class="svg-hover" width="48" height="4">
+                <use href="./images/icons.svg#icon-hover"></use>
+              </svg>
             </li>
             <li class="header-list-item">
               <a href="" class="header-list-link">Portfolio</a>
@@ -71,6 +74,13 @@
           <h2 class="visually-hidden">section 2</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
+              <svg class="svg-advantages">
+                <use
+                  href="./images/icons.svg#icon-antenna-1"
+                  height="64"
+                  width="64"
+                ></use>
+              </svg>
               <h3 class="advantages-title">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -118,6 +128,32 @@
               <div class="team-list-div">
                 <h3 class="team-list-title">Mark Guerrero</h3>
                 <p class="team-list-text">Product Designer</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"></a>
+                    <svg class="team-link-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"></a>
+                    <svg class="team-link-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"></a>
+                    <svg class="team-link-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li class="team-soc-item">
+                    <a href="" class="team-soc-link"></a>
+                    <svg class="team-link-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -175,6 +211,11 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <p class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Banking App</h3>
                 <p class="portfolio-list-text">App</p>
@@ -188,6 +229,11 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <p class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Cashless Payment</h3>
                 <p class="portfolio-list-text">Marketing</p>
@@ -201,6 +247,11 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <p class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Meditation App</h3>
                 <p class="portfolio-list-text">App</p>
@@ -214,6 +265,11 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <p class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Taxi Service</h3>
                 <p class="portfolio-list-text">Marketing</p>
@@ -227,6 +283,11 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <p class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Screen Illustrations</h3>
                 <p class="portfolio-list-text">Design</p>
@@ -240,6 +301,11 @@
                 height="300"
                 class="portfolio-list-img"
               />
+              <p class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
               <div class="portfolio-div">
                 <h3 class="portfolio-list-title">Online Courses</h3>
                 <p class="portfolio-list-text">Marketing</p>
@@ -252,9 +318,9 @@
 
     <footer class="footer">
       <div class="container">
-          <a href="./index.html" class="footer-logo-link">
-            Web<span class="logo-link-white">Studio</span></a
-          >
+        <a href="./index.html" class="footer-logo-link">
+          Web<span class="logo-link-white">Studio</span></a
+        >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
