--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
           <li class="footer-cos-item">
             <a href="" class="footer-soc-link">
               <svg class="footer-soc-icon" width="24" height="24">
-                <use href="/images/icons.svg#icon-instagram-2"></use></svg></a>
+                <use href="./images/icons.svg#icon-instagram-2"></use></svg></a>
           </li>
           <li class="footer-cos-item">
             <a href="" class="footer-soc-link">
