--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           </p>
         </div>
         <div class="footer-soc">
-          <p class="footer-soc-title">Social Media</p>
+          <p class="footer-soc-title">Social media</p>
           <ul class="footer-soc-list">
             <li class="footer-cos-item">
               <a href="" class="footer-soc-link">
